<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_marginBottom="30dp"
            style="@style/headerTextPrimary"
            android:text="@string/dangky"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailUp"
                android:hint="Email"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                style="@style/modifiedEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passUp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primaryTextColor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passUpAgain"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primaryTextColor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthUp"
                android:hint="@string/birthday"
                android:editable="false"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primaryTextColor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/roleUp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/collaborateUP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:text="@string/collaborate" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/memberUp"
                android:text="@string/member"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameUp"
                android:hint="@string/fullname"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneUp"
                android:hint="@string/mobile_phone"
                android:inputType="phone"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/accept_license"
                android:id="@+id/checkAccept"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickhere"
                android:id="@+id/clickForDetails"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>


        <Button
            style="@style/loginButton"
            android:layout_marginVertical="15dp"
            android:text="@string/dangky"
            android:id="@+id/signUp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wanttologin"
            android:textSize="20dp"
            android:id="@+id/backToLogin"
            android:textStyle="bold"
            android:gravity="center|bottom"
            android:textColor="@color/primaryTextColor"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
